Fixed footer responsive spacing

--- a/css/bottom-section.css
+++ b/css/bottom-section.css
@@ -4,6 +4,7 @@
 	text-align: center;
 	padding-top: 40px;
 	margin-bottom: 50px;
+	background-color: transparent;
 }
 
 .bottom {
