--- a/css/responsive.css
+++ b/css/responsive.css
@@ -179,6 +179,10 @@
 		padding-left: 10rem !important; 
 	}
 
+	.footer {
+		margin-top: 2rem;
+	}
+
 }
 
 @media (max-width: 876px) {
